--- a/_sass/layout/_stacks.scss
+++ b/_sass/layout/_stacks.scss
@@ -1,4 +1,4 @@
-// Styling for the services section
+// Styling for the stacks section
 .service-heading {
   margin: 15px 0;
   text-transform: none;
