Portfolio projects updated

--- a/_sass/layout/_timeline.scss
+++ b/_sass/layout/_timeline.scss
@@ -56,6 +56,10 @@
       border: 7px solid $gray-200;
       border-radius: 100%;
       background-color: $primary;
+      img {
+        width: 100%;
+        height: 100%;
+      }
       h4 {
         font-size: 10px;
         line-height: 14px;
