--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -10,3 +10,5 @@ $gray-600: #868e96 !default;
 $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
+
+$red-default: #ea4a4b !default;
