--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -10,13 +10,13 @@
 }
 
 .btn-primary {
-  background-color: $primary;
-  border-color: $primary;
+  background-color: $red-default;
+  border-color: $red-default;
   &:active,
   &:focus,
   &:hover {
-    background-color: darken($primary, 7.5%) !important;
-    border-color: darken($primary, 7.5%) !important;
+    background-color: darken($red-default, 7.5%) !important;
+    border-color: darken($red-default, 7.5%) !important;
     color: white;
   }
   &:active,
