--- a/_sass/layout/_timeline.scss
+++ b/_sass/layout/_timeline.scss
@@ -55,7 +55,7 @@
       color: $white;
       border: 7px solid $gray-200;
       border-radius: 100%;
-      background-color: $primary;
+      background-color: $red-default;
       img {
         width: 100%;
         height: 100%;
