--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,7 @@
     content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="{{ site.description }}" />
   <meta name="author" content="{{ site.author }}" />
-  <meta property="og:image" content="%PUBLIC_URL%/thumbnail.jpeg" />
+  <meta property="og:image" content="%PUBLIC_URL%" />
   <meta property="og:title" content="박종원 포트폴리오" />
   <meta property="og:description" content="포트폴리오 보러가기" />
   <link
