hover color changed

--- a/_sass/layout/_contact.scss
+++ b/_sass/layout/_contact.scss
@@ -21,7 +21,7 @@ section#contact {
     }
   }
   .form-control:focus {
-    border-color: $primary;
+    border-color: $red-default;
     box-shadow: none;
   }
   ::-webkit-input-placeholder {
