--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -11,4 +11,4 @@ $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 
-$red-default: #ea4a4b !default;
+$red-default: #e25d5d !default;
